模糊化查询组织，id获取组织详情
